--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -9,7 +9,7 @@
 				<i class="fa fa-angle-double-right" aria-hidden="true"></i>
 				<a href="/entry">博客</a>
 				/
-				<a href="/about">关于</a>
+				<a href="/about" target="_blank">关于</a>
 			</p>
 			<p>
 				<i class="fa fa-angle-double-right" aria-hidden="true"></i>
