--- a/views/home/partial/header.ejs
+++ b/views/home/partial/header.ejs
@@ -3,7 +3,7 @@
 		<div class="container-fluid">
 			<nav class="pull-right">
 				<a href="/archive">归档</a>
-				<a href="/about">关于</a>
+				<a href="/about" target="_blank">关于</a>
 			</nav>
 			<a href="/entry" class="logo">
 				<i class="iconfont icon-z4 logo-z"></i>
